[package]
name = "naught"
description = "TBA"
version = "0.1.0-dev"
authors = ["Fedor Indutny <fedor@indutny.com>"]
edition = "2018"
exclude = [".travis.yml"]
repository = "https://github.com/indutny/naught"
readme = "README.md"
license = "MIT"
categories = ["database-implementations"]

[dependencies]
hyper = "^0.12.24"
futures = "^0.1.25"
serde_json = "^1.0.38"
serde = { version = "^1.0.87", features = ["derive"] }
siphasher = "^0.3.0"
tokio = "^0.1.15"
