[package]
name = "naught"
description = "TBA"
version = "0.1.0-dev"
authors = ["Fedor Indutny <fedor@indutny.com>"]
edition = "2018"
exclude = [".travis.yml"]
repository = "https://github.com/indutny/naught"
readme = "README.md"
license = "MIT"
categories = ["database-implementations"]

[dependencies]
hyper = "^0.12.24"
futures = "^0.1.25"
serde_json = "^1.0.38"
serde = { version = "^1.0.87", features = ["derive"] }
siphasher = "^0.3.0"
tokio = "^0.1.15"
log = "0.4.6"
env_logger = "0.6.0"
clap = "^2.32.0"
tokio-lock = "^1.0.0"
